# kafka-public

./: README.md
chapter_1/section_1a/: README.md
chapter_1/section_1b/: README.md
chapter_1/section_1c/: README.md
chapter_1/section_1d/: README.md
chapter_1/section_1d/kafka_demo/e_commerce_app/: launcher.py  service_base.py
chapter_1/section_1e/: README.md
chapter_1/section_1e/kafka_demo/e_commerce_app/: launcher.py
chapter_1/section_1f/: README.md
chapter_1/section_1f/kafka_demo/: docker-compose.yml
chapter_1/section_1g/: README.md
chapter_2/section_2a/: README.md
chapter_2/section_2b/: README.md
chapter_2/section_2c/: README.md
chapter_3/section_3a/: README.md
chapter_3/section_3b/: README.md
chapter_3/section_3c/: README.md
chapter_3/section_3d/: README.md
chapter_3/section_3e/: README.md
chapter_4/section_4a/: README.md
chapter_4/section_4b/: README.md
chapter_4/section_4b/kafka_demo/: ecommerce-app-fullstack-keypair.pem
chapter_4/section_4c/: README.md
chapter_4/section_4d/: README.md
chapter_4/section_4e/: README.md
chapter_4/section_4f/: README.md
chapter_4/section_4f/kafka_demo/: terraform_accessKeys.csv
chapter_5/section_5a/: README.md
chapter_5/section_5a/kafka_demo/: LICENSE  README.md  pyproject.toml
chapter_5/section_5a/kafka_demo/e_commerce_app_kafkaesque/services/: notification_service.py
chapter_5/section_5a/kafka_demo/kafkaesque/: __init__.py
chapter_5/section_5a/kafka_demo/kafkaesque/broker/: _util.py  router.py
chapter_5/section_5b/: README.md
(+89 files in other folders)
